# organon

./: .commitlintrc.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-macos.yml  docker.yml  pages.yml  release.yml  repo-policy.yml  tests.yml
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/8b27c3ea-66b7-4a08-b756-a2894eb4fcc2/: hud-state.json  last-tool-error-state.json
ai/: __init__.py  bridge.py  indexer.py  requirements.txt
ai/common/: __init__.py  ignore.py  sensitive.py
ai/embeddings/: store.py
ai/extractor/: extract.py
ai/mcp_server/: server.py
ai/query/: nl_query.py
ai/relations/: extract.py  store.py
ai/tests/: test_relations_store.py  test_sensitive.py
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: EntityPanel.tsx  MermaidPreview.tsx
apps/desktop/src/lib/: api.ts  storage.ts  types.ts  utils.test.ts  utils.ts
crates/organon-cli/: Cargo.toml
crates/organon-cli/src/: agent.rs  api.rs  cli_types.rs  context.rs  export.rs  format.rs  graph_cmds.rs  graph_view.rs  health.rs  inspect.rs  lib.rs  main.rs  mcp_cmd.rs  python.rs  queries.rs  query_cmd.rs  search.rs  search_cmds.rs  watch.rs  workspace_cmd.rs
crates/organon-core/: Cargo.toml
crates/organon-core/src/: config.rs  entity.rs  git.rs  graph.rs  ignore.rs  lib.rs  lifecycle.rs  main.rs  scanner.rs  watcher.rs  workspace.rs
crates/organon-core/tests/: graph_tests.rs  rename_tracker_tests.rs  scanner_tests.rs
crates/organon-mcp/: Cargo.toml
crates/organon-mcp/src/: lib.rs
docs/: agent-usage.md  app.js  claude-desktop.md  cursor.md  index.html  marketplaces.md  styles.css
plugins/organon/: .mcp.json  README.md
plugins/organon/.claude-plugin/: plugin.json
tests/: test_embeddings.py  test_extractor.py  test_indexer.py  test_nl_query.py  test_relations.py
