[project]
name = "organon-ai"
version = "0.1.0"
description = "Organon AI layer — extraction, embeddings, MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.3",
    "lancedb>=0.6",
    "pyarrow>=24.0.0",
    "pypdf>=4.0",
    "mcp>=1.0",
    "ollama>=0.6.2",
    "ruff>=0.15.12",
]

[project.scripts]
organon-indexer = "ai.indexer:main"
organon-mcp    = "ai.mcp_server.server:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
