[package]
name = "organon-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "organon"
path = "src/main.rs"

[dependencies]
organon-mcp = { path = "../organon-mcp" }
organon-core = { path = "../organon-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
clap_complete = "4"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
