[package]
name = "organon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
anyhow = "1"
tracing = "0.1"
