[package]
name = "organon-core"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
hex = "0.4"
chrono = "0.4"
anyhow = "1"
walkdir = "2"
rayon = "1"
toml = "1.1"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
