[package]
name = "organon-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
organon-core = { path = "../organon-core" }
anyhow = "1"
rmcp = { version = "0.16.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tempfile = "3"
